--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "docs": "ts-node src/docs/swagger.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ibrhm",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
@@ -22,7 +22,6 @@
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
-    "@types/swagger-ui-express": "4.1.6",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.7.0",
     "cors": "2.8.5",
@@ -34,8 +33,6 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
-    "swagger-autogen": "2.23.7",
-    "swagger-ui-express": "4.6.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
